--- a/VIGILO/BAYERLogs.ipynb
+++ b/VIGILO/BAYERLogs.ipynb
@@ -1294,7 +1294,7 @@
    "source": [
     "# RUTINA PARA GRABAR en Archivo las SALIDAS \n",
     "\n",
-    "with open('resultados.txt', 'w', encoding=\"utf-8\") as f:\n",
+    "with open('/data/resultados.txt', 'w', encoding=\"utf-8\") as f:\n",
     "    f.write(f\"PROCESO DE INTEFACES desde resultado {fecha_inicio}\" + '\\n')\n",
     "    f.close()\n",
     "\n",
@@ -2477,7 +2477,7 @@
    "source": [
     "# EXPORTAR DATOS EN FORMATO EXCEL\n",
     "\n",
-    "df.to_excel(\"./SQLServer.xlsx\")"
+    "df.to_excel(\"/data/SQLServer.xlsx\")"
    ]
   },
   {
